// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MemberItem /> renders correctly with all props 1`] = `
<div
  style={
    Object {
      "marginBottom": "-1px",
    }
  }
>
  <div
    className="list-group-item"
    key="test"
    onClick={[Function]}
  >
    <Flex
      alignContent="stretch"
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      wrap="nowrap"
    >
      <Identicon
        hash="randomhashof15c"
        size={32}
      />
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={0}
        pad={10}
        shrink={1}
      >
        test
      </FlexItem>
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={1}
        shrink={1}
      >
        <Icon
          bsStyle="danger"
          faStyle="fas"
          fixedWidth={false}
          name="trash"
          onClick={[Function]}
          pullRight={true}
          tip="Remove Member"
        />
        <Icon
          bsStyle="success"
          faStyle="fas"
          fixedWidth={false}
          name="check"
          pullRight={true}
          tip="Selected Member"
        />
      </FlexItem>
    </Flex>
  </div>
  <Uncontrolled(Panel)
    style={
      Object {
        "margin": "0",
      }
    }
  >
    <PanelBody
      bsClass="panel"
      collapsible={false}
    >
      <label>
        Permissions
      </label>
      <ListGroupItem
        allowFocus={false}
        bsStyle="danger"
        key="foo"
        onClick={[Function]}
      >
        <code>
          foo
        </code>
        <Icon
          faStyle="far"
          fixedWidth={false}
          name="square"
          pullRight={true}
        />
      </ListGroupItem>
      <ListGroupItem
        allowFocus={false}
        bsStyle="success"
        key="bar"
        onClick={[Function]}
      >
        <code>
          bar
        </code>
        <Icon
          faStyle="far"
          fixedWidth={false}
          name="check-square"
          pullRight={true}
        />
      </ListGroupItem>
    </PanelBody>
  </Uncontrolled(Panel)>
</div>
`;

exports[`<MemberItem /> renders correctly with minimal props 1`] = `
<div
  style={
    Object {
      "marginBottom": "-1px",
    }
  }
>
  <div
    className="list-group-item"
    key="test"
    onClick={[Function]}
  >
    <Flex
      alignContent="stretch"
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      wrap="nowrap"
    >
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={0}
        pad={10}
        shrink={1}
      >
        test
      </FlexItem>
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={1}
        shrink={1}
      />
    </Flex>
  </div>
</div>
`;
